# ur5e_vla

./: package.xml  readme.md  setup.cfg  setup.py
archive/: OLD.ur5e.launch.py  model.sdf  ur5e.urdf  ur5e.urdf.xacro
archive/models/ur5e/: model.sdf
config/ur5e/: visual_parameters.yaml
launch/: ur5e.launch.py
models/ur5e/: model.config  model.sdf  ur5e.urdf
urdf/inc/: ur_common.xacro
urdf/ur5e/: OLDur5e.urdf  ur5e.urdf.xacro  ur_macro.xacro
